# cargo-preflight

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: main.rs  metadata.rs  patterns.rs  scanner.rs
